--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <ul>
             <li><p><b> General Environment Vision: Make computer vision systems more robust to the environment (scattering media, bad weather)</b></p></li>
             <li><p><b> Low-cost 3D reconstruction and depth estimation in scattering medium</b></p></li>
-            <li><p><b> The application of computer vision in the medical field</b> (including but not limited to medical image processing, pathological image segmentation, image enhancement)</p></li>
+            <li><p><b> The application of computer vision in the medical field (including but not limited to medical image processing, pathological image segmentation, image enhancement)</b></p></li>
             <li><p><b> AI-based Surgical Navigation: Make AI have the ability to generate structured diagnostic reports through medical images, and combine NLP algorithms and computer vision technology to achieve surgical navigation</b></p></li>
             <li><p><b> Surgical robot: Enable surgical robots to have accurate multi-modal fusion perception ability and precise motion control and can perform precise surgery according to the instructions analyzed by doctors or AI</b></p></li>
         </ul>
