--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <ul>
             <li><p><b>Underwater 3D Reconstruction and Depth Estimation (Master’s thesis)</b>   ,January 2022---present<br>
                 • Designed an underwater compatible SfM (Structure from motion) pipeline that enhances the robustness of terrestrial SfM to scattering medium environments.<br>
-                • Formulated an novel domain projection module (RMI input space) for rough depth prediction for lowpower embedded devices. Its mathematical part is used as a domain projection loss in Udepth to enforce the pixel-wise underwater attenuation constraints in the holistic learning process.<br>
+                • Formulated an novel domain projection module (RMI input space) for rough depth prediction for low-power embedded devices. Its mathematical part is used as a domain projection loss in Udepth to enforce the pixel-wise underwater attenuation constraints in the holistic learning process.<br>
                 • Formulated a robust and efficient end-to-end model named UDepth, for fast monocular depth estimation by incorporating underwater domain knowledge into its supervised learning pipeline. Submitted one paper on ICRA 2023.
                 the title of the paper is “<a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots</a>”.<br>
                 </p></li>
