--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </p></li>
             <li><p><b>Digital audio and video algorithm engineer (Summer Internship)</b>   ,May 2022---August 2022<br>
                 • Developed and implemented a learning-based video retrieval system based on global feature and local feature fusion. And also wrote the user manual and targeted model performance optimization guidelines document of the system.<br>
-                • Conducted a number of qualitative phase-shift auditory tests and found a relationship between the phase-shift cases and psychoacoustic model.<br>
+                • Conducted a number of qualitative phase-shift auditory tests and found a relationship between the phase-shift cases and the psychoacoustic model.<br>
                 • Upgraded the audio fingerprint encoding algorithm based on the classic psychoacoustic model. The upgraded algorithm can encode not only the sound pressure level of the audio fingerprint but also the threshold of its phase shift. (Implemented in C and MATLAB)<br>
                 </p></li>
             <li><p><b>Python Toolkit Development in Remote Sensing Lab</b>   ,January 2022---present<br>
