--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html" class="current">Home</a></div>
     <div class="menu-item"><a href="publication.html">Publications</a></div>
-    <!--<div class="menu-item"><a href="talk.html">Invited Talks</a></div>-->
+    <div class="menu-item"><a href="project.html">Projects</a></div>
     <!--<div class="menu-item"><a href="service.html">Professional Services</a></div>-->
     <div class="menu-item"><a href="https://github.com/uf-robopi/UDepth" target="_blank">Codes and Data</a></div>
     <!--<div class="menu-item"><a href="misc.html">Miscellaneous</a></div>-->
