--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
 </td>
 <td id="layout-content">
 
-    <h1 style="margin-top: 0em">Publications</h1><br>
+    <h1 style="margin-top: 0em">Projects</h1><br>
     <p>[ <a href="#preprint">Preprints</a>,
          <a href="#conference">Conference Papers</a>,
          <a href="#journal">Journal Articles</a>,
