--- a/publication.html
+++ b/publication.html
@@ -24,15 +24,15 @@
     <p>[ <a href="#preprint">Preprints</a>,
          <a href="#conference">Conference Papers</a>,
          <a href="#journal">Journal Articles</a>,
-         <a href="#thesis">Theses</a> ]</p>
+         <a href="#thesis">Thesis</a> ]</p>
 
     <div>
-        <h2><hr><a name="preprint"></a>Preprints (no review)</h2>
+        <h2><hr><a name="conference"></a>Conference Papers (full review)</h2>
         <ol>
             <li><p>
                 B. Yu, J. Wu, and M. J. Islam.<br>
                 UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots.<br>
-                In review at (ICRA 2023).<br>
+                Has been accepted (ICRA 2023).<br>
                 [ <a href="https://arxiv.org/abs/2209.12358" target="_blank">arXiv</a> ]
                 [ <a href="https://github.com/uf-robopi/UDepth" target="_blank">Code</a> ]
                 [ <a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">pre-print</a> ]
@@ -41,7 +41,7 @@
     </div>
 
  <!--<div>
-        <h2><hr><a name="conference"></a>Conference Papers (full review)</h2>
+        <h2><hr><a name="preprint"></a>Preprints (no review)</h2>
         <ol>
             <li><p>
                 J. Zhou*, J. Zhu*, J. Zhang, T. Liu, G. Niu, B. Han, and M. Sugiyama.<br>
