--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2><hr><a name="news"></a>News</h2>
         <ul>
             <li><p>
-                2023/01/16: Our paper “<a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots</a>” has been accepted by ICRA 2023 !!!
+                <b>2023/01/16: Our paper “<a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots</a>” has been accepted by ICRA 2023 !!!</b>
             </p></li>
             <li><p>
                 2022/09/15: The paper “<a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots</a>” I collaborated with Boxiao Yu and Prof. Islam was submitted to ICRA 2023.
