--- a/publication.html
+++ b/publication.html
@@ -32,7 +32,7 @@
             <li><p>
                 B. Yu, J. Wu, and M. J. Islam.<br>
                 UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots.<br>
-                Has been accepted (ICRA 2023).<br>
+                <b>Has been accepted (ICRA 2023).</b><br>
                 [ <a href="https://arxiv.org/abs/2209.12358" target="_blank">arXiv</a> ]
                 [ <a href="https://github.com/uf-robopi/UDepth" target="_blank">Code</a> ]
                 [ <a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">pre-print</a> ]
